--- a/leetcode/index.html
+++ b/leetcode/index.html
@@ -68,10 +68,10 @@
                     <p>or you can sign in with</p>
 
                     <div class="sites">
-                         <a href=""><i class="icons fa-brands fa-google"></i></a>
-                         <a href=""><i class="icons fa-brands fa-github"></i></a>
-                         <a href=""><i class="icons fa-brands fa-facebook"></i></a>
-                         <a href=""><i class="icons fa-solid fa-ellipsis"></i></a>
+                         <a href="mailto:pulkitsaxena795@gmail.com" target="_blank"><i class="icons fa-brands fa-google"></i></a>
+                         <a href="https://github.com/pulkit-s21" target="_blank"><i class="icons fa-brands fa-github"></i></a>
+                         <a href="https://facebook.com" target="_blank"><i class="icons fa-brands fa-facebook"></i></a>
+                         <a href="https://codepen.io/Pulkit2104" target="_blank"><i class="icons fa-solid fa-ellipsis"></i></a>
                     </div>
 
                </div>
